some changes on the menu logo icon

--- a/Desafio-1/home.html
+++ b/Desafio-1/home.html
@@ -39,8 +39,9 @@
     </header>
     <main>
         <div class="form">
+            <h2 id="form-title">Welcome my friend</h2>
             <p>
-                Se cadatre no nosso blog e receba as novidades o quanto antes 
+                Se cadatre no nosso blog e receba as novidades o quanto antes !!!
             </p>
             <form action="submit">
                 <div class="email">
