--- a/Desafio-1/index.html
+++ b/Desafio-1/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="nav-content">
                 <div class="logo">
-                    <a href="/link-generico.com.br">
+                    <a href="home.html">
                         <img src="./logo-projeto.jpeg ">
                     </a>
                 </div>
