feat: add a content table on the main page

--- a/Desafio-1/index.html
+++ b/Desafio-1/index.html
@@ -75,6 +75,34 @@
             </p>
         </div>
         <hr>
+        <div class="content">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Header 1</th>
+                        <th>Header 2</th>
+                        <th>Header 3</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Pink Floyd</td>
+                        <td>Marillion</td>
+                        <td>Genesis</td>
+                    </tr>
+                    <tr>
+                        <td>King Crimson</td>
+                        <td>Yes</td>
+                        <td>Emerson, Lake and Palmer</td>
+                    </tr>
+                    <tr>
+                        <td>Tool</td>
+                        <td>Opeth</td>
+                        <td>Camel</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
     <footer>
         <div class="footer-content">
@@ -94,6 +122,11 @@
                     </li>
                 </ul>
             </nav>
+        </div>
+        <div class="comebackButton">
+            <button>
+                <a href="#TOP">CLICK HERE</a>
+            </button>
         </div>
     </footer>
 </body>
