feat: adding some cool styling in the project

--- a/Desafio-1/index.html
+++ b/Desafio-1/index.html
@@ -124,7 +124,7 @@
             </nav>
         </div>
         <div class="comebackButton">
-            <button>
+            <button class="top-button">
                 <a href="#TOP">CLICK HERE</a>
             </button>
         </div>
