--- a/Desafio-1/home.html
+++ b/Desafio-1/home.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="button">
                     <button type="submit">
-                        enviar
+                        <span>enviar</span>
                     </button>
                 </div>
             </form>
